--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
+		"theme-change": "^2.5.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
